<resources>
    <string name="app_name">Servicio Social</string>

    <!-- STRINGS DEL LOGIN -->
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="boton_ingresar">Ingresar</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="rol_del_usuario">Rol del usuario:</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="agregar_usuario">Agregar</string>
    <string name="textoCheckSesion">Guardar sesión</string>
    <string name="actualizar_usuario_button">Actualizar</string>
    <string name="cambiar_contrasena_button">Cambiar Contraseña</string>
    <string-array name="roles">
        <item>Administrador</item>
        <item>Docente</item>
        <item>Alumno</item>
    </string-array>

    <!-- STRINGS DE CATEGORIA -->
    <string name="btnGuardar">Guardar</string>
    <string name="editTextCategoria">Categoria</string>
    <string name="tituloCrearCategoria">Categoria</string>
    <string name="nom_cate">Categoría</string>
    <string name="btnModificarCategoria">Modificar</string>
    <string name="btnEliminarCategoria">Eliminar</string>

    <!-- STRINGS DE MODALIDAD -->
    <string name="editTextModalidad">Modalidad</string>
    <string name="btnModificarModalidad">Modificar</string>
    <string name="btnEliminarModalidad">Eliminar</string>
    <string name="btnGuardarModalidad">Guardar</string>

    <!-- STRINGS DE PROYECTO -->
    <string name="editTextProyecto">Proyecto</string>
    <string name="tituloProyecto">Proyectos</string>
    <string name="btnModificarProyectp">Modificar</string>
    <string name="btnEliminarProyecto">Eliminar</string>
    <string name="btnGuardarProyecto">Guardar</string>
    <string name="labelCategoria">Categoría:</string>
    <string name="labelModalidad">Modalidad:</string>
    <string name="labelDocente">Encargado:</string>
    <string name="labelEstado">Estado:</string>
    <string name="action_logout">Cerrar Sesion</string>


    <!-- STRINGS DE AREA CARRERA-->
    <string name="tituloCrearAreaCarrera">Nueva Area</string>
    <string name="txtIdArea">Ingresar id de area</string>
    <string name="txtAreaCarrera">ID Area</string>
    <string name="txtdescripArea">Descripción del area</string>
    <string name="cabeceraArea1">ID</string>
    <string name="cabeceraArea2">Descrip</string>
    <string name="tituloConsultarArea">Areas</string>
    <string name="btnGuardarArea">Guardar</string>
    <string name="btnModificarArea">Modificar Area</string>
    <string name="btnEliminarArea">Eliminar Area</string>

    <!-- STRINGS DE DOCENTE-->
    <string name="tituloCrearDocente">Crear Docente</string>
    <string name="txtDui">Inserte DUI</string>
    <string name="txtNDocente">Ingrese Nombres</string>
    <string name="txtADocente">Ingrese Apellidos</string>
    <string name="txtEmailDocente">Ingrese Email</string>
    <string name="txtTelefonoDocente">Ingrese Telefono</string>
    <string name="btnGuardarDocente">Guardar Docente</string>
    <string name="btnModificarDocente">Modificar Docente</string>
    <string name="btnEliminarDocente">Eliminar Docente</string>
    <string name="cabeceraD1">DUI</string>
    <string name="cabeceraD2">Nombres</string>
    <string name="cabeceraD3">Apellidos</string>
    <string name="cabeceraD4">Email</string>
    <string name="cabeceraD5">Telefono</string>
    <string name="tituloConsultarDocente">Docentes</string>


    <!-- STRINGS DE BITACORA-->
    <string name="tituloCrearBitacora">Crear Bitacora</string>
    <string name="txt_id_bitacora">Inserte ID Bitacora</string>
    <string name="txtMes">Ingrese Mes</string>
    <string name="txt_total_horas">Ingrese horas</string>
    <string name="btnGuardarBitacora">Guardar Bitacora</string>
    <string name="btnModificarBitacora">Modificar Bitacora</string>
    <string name="btnEliminarBitacora">Eliminar Bitacora</string>
    <string name="btnDetalle">Ver detalle bitacora</string>
    <string name="tituloConsultarBitacora">Bitacoras</string>
    <string name="tituloModificarBitacora">Modificar Bitacora</string>


    <!-- STRINGS DE DETALLE BITACORA-->
    <string name="tituloCrearDetalleBitacora">Crear Detalle Bitacora</string>
    <string name="txtDetalle">Inserte ID</string>
    <string name="txtActividad">Ingrese Actividad</string>
    <string name="txtFecha">0000-00-00</string>
    <string name="tituloMDetalleBitacora">Modificar Detalle Bitacora</string>
    <string name="btnModificarDetalleBitacora">Modificar Detalle</string>
    <string name="btnEliminarDetalleBitacora">Eliminar Detalle</string>

    <!-- STRINGS DE CARRERA -->
    <string name="btnGuardarCarrera">Guardar</string>
    <string name="btnModificarCarrera">Modificar</string>
    <string name="btnEliminarCarrera">Eliminar</string>
    <string name="labelCarrera">Carreras</string>
    <string name="labelCrearCarrera">Crear Carrera</string>
    <string name="labelNomCarrera">Nombre de la Carrera</string>
    <string name="labelTotalMaterias">Total de materias</string>
    <string name="labelIdCarrera">ID</string>

    <!-- STRINGS DE ESTUDIANTE -->
    <string name="labelCarnetEstudiante">Carnet</string>
    <string name="labelNombresEstudiante">Nombres</string>
    <string name="labelApellidosEstudiante">Apellidos</string>
    <string name="labelEmailEstudiante">Email</string>
    <string name="labelTelefonoEstudiante">Telefono</string>
    <string name="labelDomicilioEstudiante">Domicilio</string>
    <string name="labelDuiEstudiante">Dui</string>
    <string name="btnGuardarE">Guardar</string>
    <string name="btnModificarE">Modificar</string>
    <string name="btnEliminarE">Eliminar</string>
    <string name="labelCrearEstudiante">Crear estudiante</string>
    <string name="labelEstudiante">Estudiantes</string>
    <!-- STRINGS DE Materia -->
    <string name="tituloConsultarMateria">Materias</string>
    <string name="tituloCrearMateria">Crear materia</string>
    <string name="cabeceraMateria1">Codigo</string>
    <string name="cabeceraMateria2">Materia</string>
    <string name="txtCodMateria">Codigo de materia</string>
    <string name="txtArea">Area</string>
    <string name="txtMateria">Materia</string>
    <string name="btnCrearMateria">Crear</string>
    <string name="btnModificarMateria">Modificar</string>
    <string name="btnEliminarMateria">Eliminar</string>

    <string name="btnGuardarMateria">Guardar</string>

    <!-- STRINGS DE Estado -->
    <string name="tituloConsultarEstado">Estados de proyectos</string>
    <string name="tituloCrearEstado">Crear estados de proyectos</string>
    <string name="cabeceraEstado1">ID</string>
    <string name="cabeceraEstado2">Estado</string>
    <string name="btnCrearEstado">Crear</string>
    <string name="btnModificarEstado">Modificar</string>
    <string name="btnEliminarEstado">Eliminar</string>
    <string name="editTextEstado">Estado</string>
    <string name="btnGuardarEstado">Guardar</string>

    <!-- STRINGS DE Record academico -->
    <string name="tituloConsultarRecord">Records academicos</string>
    <string name="tituloCrearRecord">Crear record</string>
    <string name="cabeceraRecord1">ID</string>
    <string name="cabeceraRecord2">Carnet</string>
    <string name="txtIdRecord">ID</string>
    <string name="txtCarnet_Record">Carnet</string>
    <string name="txtId_area_Record">Area</string>
    <string name="txtMaterias_aprobadas">Materias aprobadas</string>
    <string name="txtProgreso">Progreso</string>
    <string name="txtPromedio">Promedio</string>
    <string name="txtCarrera">Seleccionar carrera</string>

    <!-- STRINGS DE Nota -->
    <string name="tituloConsultarNota">Notas</string>
    <string name="tituloCrearNota">Crear nota</string>
    <string name="cabeceraNota1">Materia</string>
    <string name="cabeceraNota2">Carnet</string>
    <string name="txtCodMateria_Nota">Codigo de materia</string>
    <string name="txtCarnet_Nota">Carnet</string>
    <string name="txtCalificacion">Calificacion</string>
    <string name="btnModificarNota">Modificar</string>
    <string name="btnEliminarNota">Eliminar</string>
    <string name="btnGuardarNota">Guardar</string>

    <!-- STRINGS DE RESUMEN SOCIAL -->
    <string name="tituloCrearResumen">Crear resumen social</string>
    <string name="tituloConsultarResumen">Resumen</string>
    <string name="cabeceraResumen1">Resumen</string>
    <string name="cabeceraResumen2">Dui docente</string>
    <string name="txtIdResumen">Id</string>
    <string name="txtDui_docente">Dui docente</string>
    <string name="txtFecha_apertura_expediente">Fecha de apertura expediente</string>
    <string name="txtFecha_emision_certificado">Fecha de emision certificado</string>
    <string name="txtObservaciones">Observaciones</string>
    <string name="btnModificarResumen">Modificar</string>
    <string name="btnEliminarResumen">Eliminar</string>
    <string name="btnGuardarResumen">Guardar</string>
    <string name="eliminar_usuari_button">Eliminar</string>

    <!-- STRINGS DE DETALLE RESUMEN SERVICIO SOCIAL -->
    <string name="tituloCrearDetalleResumen">Crear detalle resumen servicio social</string>
    <string name="tituloConsultarDetalleResumen">Resumen</string>
    <string name="cabeceraDetalle_Resumen">Resumen</string>
    <string name="cabeceraDetalle_id_det_res">ID detalle</string>

    <string name="txtId_det">Id detalle</string>
    <string name="txtId_resumen">Id resumen</string>
    <string name="txtFechaInicio">Fecha de inicio</string>
    <string name="txtFechaFinal">Fecha final</string>
    <string name="txtHorasAsignadas">Horas asignadas</string>
    <string name="txtMontoDetalle">Monto</string>
    <string name="txtBenefIndir">Beneficiarios indirectos</string>
    <string name="txtBenefDir">Beneficiarios directos</string>
    <string name="txtEstadoDet">Estado de tarea</string>
    <string name="btnModificarDetalleRe">Modificar</string>
    <string name="btnEliminarDetalleRe">Eliminar</string>
    <string name="btnGuardarDetalleRe">Guardar</string>
    <!-- STRINGS DE ESTUDIANTE-PROYECTO-->
    <string name="proyectoAsignado">Proyecto asignado</string>
    <string name="proyectoNoAsignado">Proyecto no asignado</string>
    <string name="proyectoAsignadoTitulo">Proyectos Asignados</string>
    <string name="estudiantesAsignados">Estudiantes Asignados</string>
    <string name="txtcarnetEA">Carnet</string>
    <string name="txtnombreEA">Nombre</string>
    <string name="txtapellidoEA">Proyecto asignado</string>
    <string name="txtremover">Remover</string>
    <string name="txtAsignarEstudiante">Asignar estudiante</string>
    <string name="modalidadLabel">Modalidad:</string>
    <string name="docenteLabel">Docente:</string>
    <string name="estadoLabel">Estado:</string>
    <string name="carreraLabel">Carrera:</string>
    <string name="areaLabel">Area:</string>
    <string name="nombreProyectoLabel">Nombre Proyecto</string>
    <string name="descripcionLabel">Descripcion</string>
    <string name="lugarLabel">Lugar</string>
    <string name="requisito">Requisito de nota</string>
</resources>